Fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -22,8 +22,15 @@
     }
     
     body{
-        background: #FAFAF2;}
-    
+        background: #FAFAF2;
+    }
+/* =================================================== */
+/* NOT SURE IF I WANT TO DO IT THIS WAY */
+    body {
+        /* overflow-x: hidden; */
+        }
+/* =================================================== */
+  
     #page {
     width: 100%;
     max-width: 1400px;
@@ -329,6 +336,8 @@ order: 2;
 
 .site-branding-container {
     width: 100%;
+    overflow: hidden;
+
 }
 
 .site-branding-container .site-title {
@@ -382,7 +391,7 @@ nav ul li {
 
 /* mission styles */
 .mission .content-wrapper {
-    background: #AEB87D url("") no-repeat center;
+    background: #AEB87D url("https://images.unsplash.com/photo-1508748169069-82590c9f26e6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80") no-repeat center;
     background-size: cover;
     border: 3px solid #AEB87D;
     height: 500px;
@@ -392,8 +401,13 @@ nav ul li {
 }
 .mission-content h1 {
     line-height: 55px;
-    color: #fff;
+    color: black;
     text-align: center;
+    background:#FAFAF2;
+    border: 1px solid #AEB87D;
+    font-size: 1.8em;
+    padding: 5%;
+    opacity: 95%;
 }
 
 /* shop styles */
@@ -416,6 +430,24 @@ nav ul li {
     display: none;
 }
 
+/*********** Single item page **********/
+
+.image-filters-enabled .site-header.featured-image:after {
+    opacity: 0;
+}
+
+.site-header.featured-image .site-branding .site-title, .site-header.featured-image .site-branding .site-description, .site-header.featured-image .main-navigation a:after, .site-header.featured-image .main-navigation .main-menu > li.menu-item-has-children:after, .site-header.featured-image .main-navigation li, .site-header.featured-image .social-navigation li, .site-header.featured-image .entry-meta, .site-header.featured-image .entry-title {
+    color: black;
+}
+
+.image-filters-enabled .site-header.featured-image .site-featured-image:after{
+    opacity: 0;
+}
+
+.site-header.featured-image {
+    min-height: 45vh;
+}
+
 /*  ============================================================
     Tablet Styles  
     ============================================================ */
@@ -432,10 +464,12 @@ nav ul li {
     /* logo styles */
 
     .custom-logo {
-        width:20%;
+        width: 20%;
         order: 1;
         -webkit-order: 1;
     }
+
+
 
     .logo-nav{
         flex-flow: row;
@@ -520,6 +554,17 @@ nav ul li {
     .mission .content-wrapper {
         margin-top: 0;
     }
+
+    .mission-content h1 {
+        line-height: 55px;
+        color: black;
+        text-align: center;
+        background:#FAFAF2;
+        border: 1px solid #AEB87D;
+        font-size: 3em;
+        padding: 5%;
+        opacity: 95%;
+    }
     /* shop, education, about styles */
     
     .shop .content-wrapper,
@@ -547,6 +592,12 @@ nav ul li {
     .about figure {
         width: 45%;
         padding-top: 5%;
+    }
+
+    /*********** Single item page **********/
+
+    .site-header.featured-image {
+        min-height: 25vh;
     }
 }
 
@@ -596,8 +647,8 @@ nav ul li {
         align-items: center;
     }
     
-    #custom-logo {
-        width: 15%;
+    .custom-logo {
+        width: 20%;
     }
 
 
@@ -641,4 +692,10 @@ nav ul li {
         width: 33%;
         padding-top: 5%;
     }
+
+        /*********** Single item page **********/
+    
+        .site-header.featured-image {
+            min-height: 30vh;
+        }
 }
